// early sketch of p2p network

syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "P2P";

package pt.up.fc.dcc.ssd.p2p;

service Kademlia {
  rpc ping (PingRequest) returns (PingResponse) {}

  rpc store (StoreRequest) returns (StoreResponse) {}

  rpc findNode (SearchRequest) returns (SearchResponse) {}

  rpc findValue (ValueRequest) returns (ValueResponse) {}
}

// Requests

message PingRequest {
  string magicCookie
}

message StoreRequest {

}

message SearchRequest {

}

message ValueRequest{

}

// Responses

message PingResponse {

}

message StoreResponse {

}

message SearchResponse {

}

message ValueResponse {

}